feat: Change bot logic